Fix for pickers inside Collapse container.

--- a/src/MudBlazor/Styles/Components/_popover.scss
+++ b/src/MudBlazor/Styles/Components/_popover.scss
@@ -36,6 +36,16 @@
     }
 }
 
+.mud-collapse-container {
+/*    .mud-popover {
+        position: fixed;
+    }*/
+
+    .mud-picker-view {
+        position: fixed;
+    }
+}
+
 .mud-popover-overlay {
     top: 0;
     left: 0;
